// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Virtualize getVirtualized itemHeight 40 1`] = `
Object {
  "beginHeight": 0,
  "endHeight": 3840,
  "virtualizedData": Array [
    0,
    1,
    2,
    3,
  ],
}
`;

exports[`Virtualize getVirtualized scrollPosition 0 1`] = `
Object {
  "beginHeight": 0,
  "endHeight": 960,
  "virtualizedData": Array [
    0,
    1,
    2,
    3,
  ],
}
`;

exports[`Virtualize getVirtualized scrollPosition 100 1`] = `
Object {
  "beginHeight": 80,
  "endHeight": 860,
  "virtualizedData": Array [
    10,
    11,
    12,
    13,
  ],
}
`;

exports[`Virtualize getVirtualized scrollPosition 900 1`] = `
Object {
  "beginHeight": 880,
  "endHeight": 60,
  "virtualizedData": Array [
    90,
    91,
    92,
    93,
  ],
}
`;
